Simplified the logic in the xpath axis handling and the main application. Separated classes into different packages